# trackstream

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci_tests.yml
docs/: .gitignore  conf.py  credits.rst  index.rst  refs.bib
docs/_static/: stream-track.pxm
docs/documentation/: code_quality.rst  installation.rst  testing.rst
docs/examples/: orbit_rotated_frame.ipynb  plot_sgr-coordinate-frame.py
docs/examples/src/: __init__.py  coordinates.py
docs/papers_and_presentations/: README.rst
docs/stream_tracker/: index.rst
docs/stream_tracker/data/: index.rst
docs/trackstream/: index.rst  streamtrack.rst
docs/trackstream/data/: index.rst
docs/trackstream/preprocessing/: index.rst
docs/trackstream/utils/: index.rst  interpolation.rst  tests_helper.rst  type_hints.rst  utils_ref.rst  utils_tests.rst
docs/whatsnew/: 0.1.rst  1.0.rst  CHANGES.rst  index.rst  planned.rst
licenses/: LICENSE.rst  TEMPLATE_LICENSE.rst
notebooks/: ABOUT.txt  Alternatives.ipynb  Tracks_scratch.ipynb  g-h filter.ipynb  process_models.ipynb  scratch.ipynb  streamspray.ipynb
notebooks/Filters/: Cartesian-fixstep.ipynb  Cartesian-updatestep.ipynb  g-h filter.ipynb  order_two.ipynb
notebooks/HTML_export/: Manifolds.html
notebooks/Manifolds/: Manifold.ipynb
notebooks/Preprocessing/: Data SOM.ipynb  Kernel Distance.ipynb  Orbit Rotated Frame.ipynb  Orbit SOM.ipynb
notebooks/old/: Tracks.ipynb
notebooks/step_distributions/: poisson.ipynb
notes/SOM/: WisconsinBreastCancerData_Unpacked.mat
papers_and_presentations/: ABOUT.txt
src/trackstream/: __init__.py  _astropy_init.py  _type_hints.py  _typing.py  base.py  common.py  conftest.py  setup_package.py  version.py  visualization.py
src/trackstream/clean/: __init__.py  base.py  lof.py
src/trackstream/clean/builtin/: __init__.py  lof.py
src/trackstream/data/: IbataEtAl2017.ecsv  Pal_11_ex.ecsv  Pal_5_ex.ecsv  README.rst  Vasiliev18.ecsv
src/trackstream/data/example/: __init__.py  orbit.py  stream.py
src/trackstream/example_data/: __init__.py  example_coords.py  example_data.py  example_nbody.py  example_orbit.py  example_pal5.py
src/trackstream/fit/: __init__.py  fitter.py  kalman.py  path.py  rotated_frame.py  som.py  timestep.py  visualization.py  width.py
src/trackstream/frame/: __init__.py  fit.py  interop.py  result.py
src/trackstream/io/: __init__.py  core.py  normalize.py  register.py
src/trackstream/stream/: __init__.py  arm.py  base.py  core.py  outlier_detection.py  plural.py  stream.py  utils.py  visualization.py
src/trackstream/tests/: __init__.py  helper.py  test_base.py  test_init.py  test_visualization.py
src/trackstream/track/: __init__.py  core.py  fitresult.py  fitter.py  kalman.py  path.py  plural.py  rotated_frame.py  som.py  utils.py  visualization.py
src/trackstream/utils/: __init__.py  _attrs.py  coord_utils.py  descriptors.py  exceptions.py  misc.py  numpy_overload.py  pbar.py  to_format_overload.py  unit_utils.py  visualization.py
streamtrack/: __init__.py  characterize.py  conftest.py  fit_rotated_frame.py  plot.py  preprocessing.py
streamtrack/example_data/: __init__.py  example_coords.py  example_data.py  example_nbody.py  example_orbit.py
streamtrack/tests/: __init__.py  test_fit_rotated_frame.py
streamtrack/utils/: __init__.py  coordinates.py  core.py
tests/: helper.py  test_arm.py  test_base.py  test_core.py  test_init.py  test_visualization.py
tests/frame/: __init__.py  test_rotated_frame.py
tests/track/: __init__.py
tests/track/fit/: __init__.py  test_fitresult.py  test_fitter.py  test_kalman.py  test_path.py  test_utils.py
tests/utils/: test_pbar.py
trackstream/: __init__.py  _astropy_init.py  _type_hints.py  base.py  common.py  conf.py  config.py  conftest.py  core.py  plot.py  rotated_frame.py  setup_package.py  som.py  stream.py  streamtrack.cfg  transition_matrix.py  type_hints.py  visualization.py
trackstream/data/: pal5_radec.ecsv  software.bib
trackstream/data/IbataEtAl2017/: table2.ecsv  vizier.asdf
trackstream/example_data/: Harris2010_MWGCs.ecsv  __init__.py  example_coords.py  example_data.py  example_nbody.py  example_orbit.py  example_pal5.py  vasiliev18_table.txt
trackstream/example_data/tests/: __init__.py  data.py  test_example_coords.py
trackstream/kalman/: __init__.py  core.py  helper.py  plot.py
trackstream/postprocess/: __init__.py
trackstream/preprocess/: __init__.py  plot.py  preprocessing.py  rotated_frame.py  som.py  transition_matrix.py  utils.py
trackstream/preprocess/tests/: __init__.py  test_rotated_frame.py  test_som.py  test_transition_matrix.py  test_utils.py
trackstream/process/: __init__.py  core.py  kalman.py  plot.py  processing.py  utils.py
trackstream/stream/: arm.py  base.py  core.py  utils.py
trackstream/stream/tests/: test_stream.py
trackstream/tests/: __init__.py  test_StreamTrack.py  test_TrackStream.py  test_conf.py  test_core.py  test_init.py  test_rotated_frame.py  test_som.py  test_stream.py  test_transition_matrix.py  test_type_hints.py  test_utils.py
trackstream/tests/helper/: __init__.py  baseclassdependent.py  typevar_tests.py
trackstream/track/: fitresult.py  fitter.py  kalman.py  path.py  rotated_frame.py  som.py  visualization.py
trackstream/track/tests/: test_core.py  test_rotated_frame.py
trackstream/utils/: __init__.py  _framelike.py  convert.py  coord_utils.py  coordinates.py  core.py  descriptors.py  generic_coordinates.py  interpolate.py  interpolated_coordinates.py  misc.py  path.py  pbar.py  spline.py  utils.py
trackstream/utils/_old/: coordinates.py
trackstream/utils/tests/: __init__.py  test_coord_utils.py  test_framelike.py  test_generic_coordinates.py  test_interpolate.py  test_interpolated_coordinates.py  test_misc.py  test_path.py  test_pbar.py  test_spline.py
(+82 files in other folders)
