[metadata]
name = trackstream
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://trackstream.readthedocs.io
description = stream tracker
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/trackstream

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    pytest
    scipy
    filterpy
    astronat @ git+https://github.com/nstarman/astronat.git
    utilipy @ git+https://github.com/nstarman/utilipy.git

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
trackstream = data/*

[tool:pytest]
testpaths = "trackstream" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/trackstream/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    trackstream/_astropy_init*
    trackstream/conftest.py
    trackstream/*setup_package*
    trackstream/tests/*
    trackstream/*/tests/*
    trackstream/extern/*
    trackstream/version*
    */trackstream/_astropy_init*
    */trackstream/conftest.py
    */trackstream/*setup_package*
    */trackstream/tests/*
    */trackstream/*/tests/*
    */trackstream/extern/*
    */trackstream/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
